--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.19.0
-  visibility_detector: ^0.4.0+2
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
