improve showModal & textfields

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,26 @@
 include: package:flutter_lints/flutter.yaml
 
-# Additional information about this file can be found at
-# https://dart.dev/guides/language/analysis-options
+formatter:
+  page_width: 130
+
+linter:
+  rules:
+    # Code Style
+    prefer_const_constructors: true # Menggunakan const pada konstruktor jika memungkinkan
+    prefer_const_literals_to_create_immutables: true # Menggunakan const untuk koleksi yang tidak berubah
+    sort_constructors_first: true # Menyusun konstruktor sebelum metode lainnya
+    always_use_package_imports: true # Menghindari impor relatif
+
+    # Best Practices
+    prefer_single_quotes: true # Menggunakan tanda kutip tunggal untuk string
+
+    # Performance
+    avoid_unnecessary_containers: true # Menghindari penggunaan Container yang tidak perlu
+    prefer_final_fields: true # Menggunakan final untuk field yang tidak berubah
+
+    # Null Safety
+    prefer_null_aware_operators: true # Menggunakan operator null-aware (`??`, `?.`, `??=`)
+
+    # Naming Convention
+    constant_identifier_names: true # Menggunakan format UPPER_CASE untuk konstanta
+    non_constant_identifier_names: false # Tidak mengizinkan penamaan variabel yang tidak sesuai standar
