--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,16 @@
 name: quick_dev_sdk
 description: "A Flutter Software Development Kit."
-version: 0.0.5
+version: 0.0.5+1
 homepage:
 
 environment:
-  sdk: ^3.8.1
+  sdk: ^3.9.0
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
   intl: ^0.20.2
-  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
